maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: not found: value aMarque
  while (aMarque) {
         ^ShortestPathMaze:29: error: not found: value aMarque
    aMarque = false
    ^ShortestPathMaze:41: error: not found: value aMarque
          aMarque = true
          ^ShortestPathMaze:49: error: not found: value aMarque
          aMarque = true
          ^ShortestPathMaze:57: error: not found: value aMarque
          aMarque = true
          ^ShortestPathMaze:65: error: not found: value aMarque
          aMarque = true
          ^